<resources>
    <string name="API_KEY">ae658b988920747437b96a1b8396f73b3cbb002bcd106ddc6359d3403b93bd74</string>
    <string name="masuk">Masuk</string>
    <string name="log_with_google">Masuk dengan Google</string>
    <string name="log_with_fb">Masuk dengan Facebook</string>
    <string name="or">atau</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa password</string>
    <string name="login">Login</string>
    <string name="log_with_fingerprint">Masuk dengan fingerprint</string>
    <string name="dont_have_account">Belum punya akun?</string>
    <string name="register_now">Daftar sekarang</string>
    <string name="all_watchlist">All Watchlist</string>
    <string name="add_symbol">Add Symbol</string>
    <string name="watchlist">Watchlist</string>
    <string name="stream">Stream</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="portfolio">Portfolio</string>
    <string name="username_empty">Username can\'t be empty</string>
    <string name="username_length">Username can\'t be less than 6 digit</string>
    <string name="password_empty">Password can\'t be empty</string>
    <string name="password_digit">Password can\'t be less than 6 digit</string>
    <string name="feature_not_available">Sorry, this feature is not available yet</string>
</resources>